# bioinformatics_final_project

./: .gitignore  001_Data_retrieve.ipynb  003_train_LSTM.ipynb  004_train_CNN.ipynb  005_Para_investigar.ipynb  dataaug.py  datagen.py  helpers.py  models.py  pyproject.toml
