[tool.poetry]
name = "bioinformatics-final-project"
version = "0.1.0"
description = ""
authors = ["Mauricio Anderson <m.anderson.ricci@gmail.com>"]
readme = "README.md"
packages = [{include = "bioinformatics_final_project"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
ipython = "^8.9.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ipykernel = "^6.21.1"
chembl-webresource-client = "^0.10.8"
numpy = "^1.24.2"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
rdkit = "^2022.9.4"
tensorflow = "^2.11.0"
deepchem = "^2.7.1"
tensorflow-addons = "^0.19.0"
pandas-summary = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
